--- a/app/package.json
+++ b/app/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.9",
+    "bootstrap": "^4.5.2",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-simple-maps": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
